Port build to dune and adds travis support

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
-*.o
-*.cmx
-*.cmxs
-*.cmxa
-*.exe
-*.cmt
-*.cmti
-examples/demo.js
-examples/counters.js
-examples/svg.js
-examples/date.js
-doc/
-js_browser.ml
-*~
+_build
+.merlin
