--- a/examples/tippy/bindings/dune
+++ b/examples/tippy/bindings/dune
@@ -6,6 +6,5 @@
 
 (library
  (name bindings)
- (libraries gen_js_api ocaml-vdom)
- (modes byte)
- (js_of_ocaml))
+ (libraries gen_js_api vdom)
+ (modes byte))
