--- a/playground/editor/Makefile
+++ b/playground/editor/Makefile
@@ -1,5 +1,12 @@
+DEPS = \
+  rollup \
+  codemirror \
+  @rollup/plugin-node-resolve \
+  @codemirror/theme-one-dark \
+  @codemirror/language \
+  @codemirror/legacy-modes
+
 .PHONY: bundle
-bundle: editor.mjs
-	npm i rollup @rollup/plugin-node-resolve codemirror @codemirror/lang-javascript
-	node_modules/.bin/rollup editor.mjs -f iife -o editor.bundle.js -p @rollup/plugin-node-resolve
-	cp editor.bundle.js ../editor.js
+bundle:
+	npm i $(DEPS)
+	node_modules/.bin/rollup editor.mjs -f iife -o editor.js -p @rollup/plugin-node-resolve
