--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-/_build
-/playground/editor/node_modules
-/playground/editor/package-lock.json
-/playground/editor/editor.js
-/playground/editor.js
+_build
