--- a/playground/dune
+++ b/playground/dune
@@ -1,11 +1,9 @@
 (rule
  (target examples.ml)
- (deps (glob_files_rec %{project_root}/examples/7guis/**index.ml))
+ (deps (glob_files_rec %{project_root}/examples/**index.ml))
  (action
   (with-stdout-to %{target}
    (run %{project_root}/tools/gen.exe %{deps}))))
-
-(data_only_dirs editor)
 
 (executable
  (name index)
@@ -24,8 +22,6 @@
  (target exports.txt)
  (action
   (run jsoo_listunits -o %{target} stdlib %{lib:vdom.base:vdom_base.cma} %{lib:vdom:vdom_js.cma})))
-
-(copy_files editor/editor.js)
 
 (rule (copy index.bc.js index.js))
 
