--- a/vdom.opam
+++ b/vdom.opam
@@ -7,7 +7,11 @@ This package contains:
 - OCaml bindings to DOM and other client-side Javascript APIs (using gen_js_api).
 - An implementation of the Elm architecture, where the UI is specified as a functional "view" on the current state."""
 maintainer: ["Alain Frisch <alain.frisch@lexifi.com>"]
-authors: ["Alain Frisch <alain.frisch@lexifi.com>"]
+authors: [
+  "Alain Frisch <alain.frisch@lexifi.com>"
+  "Marc Lasson <marc.lasson@lexifi.com>"
+  "Aurélien Saue <aurelien.saue@lexifi.com>"
+]
 homepage: "https://github.com/LexiFi/ocaml-vdom"
 bug-reports: "https://github.com/LexiFi/ocaml-vdom/issues"
 depends: [
@@ -15,6 +19,9 @@ depends: [
   "gen_js_api" {>= "1.0.6"}
   "js_of_ocaml-compiler"
   "odoc"
+]
+conflicts: [
+  "ocaml-vdom" {!= "transition"}
 ]
 build: [
   ["dune" "subst"] {dev}
